xboxdrv 0.4.2 - (11/Jan/2009)
============================
* fixed --dpad-only

xboxdrv 0.4 - (07/Jan/2009)
===========================

* added --square-axis option
* added --autofire option
* added --relative-axis option (i.e. emulate joystick throttle)
* added --ui-buttonmap and --ui-axismap to change uinput events
* support for keyboard events
* support for mouse emulation


xboxdrv 0.3 - (06/Nov/2008)
============================

* added short note when the USB device is busy
* added note to README about running it via sudo
* added some missing header files
* added new third party controller to the auto-detection
* minor other small bug fixes


xboxdrv 0.2 - (03/May/2008)
===========================

* added support for Xbox360 wireless gamepads
* added support for the Xbox360 guitar controller
* added --dpad-only option for apps that don't need analogsticks
* added --axismap option to remap the axes
* added --buttonmap option to remap the buttons
* added option to specify the USB path to use, instead of using
  automatic detection
* added option to enforce the controller type
* added deadzone configuration support
* switched from usb_bulk_read() to usb_interrupt_read(), this fixes
  problems with some controller


xboxdrv 0.1 - (13/Apr/2008)
===========================
  * initial release

# EOF #