@@ -129,6 +129,20 @@ For rumble to work make sure you have connected the controller to a
 USB port that has enough power, i.e. an unpowered USB hub might not
 work.
 
+[[ Deadzone ]]
+--------------
+
+The deadzone is the area at which the sticks do not report any
+events. The default is zero, which gives the best sensitifity but
+might also cause trouble in some games in that the character or camera
+might move without moving the stick. To fix this one has to set the
+value to something higher:
+
+ % ./xboxdrv --deadzone 4000
+
+A value of 4000 works quite well for most games. 
+
+
 [[ Square Axis ]]
 -----------------
 
@@ -228,6 +242,17 @@ Except that the right hand side is an event name from
 /usr/include/linux/input.h. You can use all KEY_ or BTN_ codes for
 --ui-buttonmap and all ABS_ and REL_ ones for --ui-axismap.
 
+Instead of the low level KEY_ names, which represent keycodes, you can
+also use the higher level X11 keysyms XK_, the keysyms have the
+advantage that they map directly to the key you expect, while a KEY_
+name gets mungled by the X11 keymap and will often not report what you
+expect in case you use a keymap that is different then your keyboard
+(i.e. dvorak on a qwerty keyboard).
+
+A full list of X11 keysyms is available at
+/usr/include/X11/keysymdef.h, note that you can only use those that
+are reachable by your current.
+
 When you try to let a gamepad key send a keyboard event you might run
 into trouble with Xorg, for possible fixes see the section further down.
 
@@ -248,6 +273,7 @@ optional:
 --ui-buttonmap X1=REL_???:VALUE:REPEAT
   VALUE:  the of the event (default: 10)
   REPEAT: number of milisecond to pass before the event is fired again (default: 5)
+
 
 [[ Running InputDrv ]]
 ----------------------
@@ -402,6 +428,8 @@ Sauerbraten
 -----------
 
 First analogstick gets mapped te cursor keys, second analogstick gets mapped to mouse.
+Note: This is just an incomplete example, not a perfectly playable
+configuration, you have to do tweaking yourself.
 
  % ./xboxdrv \
     --ui-axismap x2=REL_X:10,y2=REL_Y:-10,x1=KEY_LEFT:KEY_RIGHT,y1=KEY_UP:KEY_DOWN \
@@ -413,6 +441,9 @@ First analogstick gets mapped te cursor keys, second analogstick gets mapped to 
 
 Warsow
 ------
+
+Note: This is just an incomplete example, not a perfectly playable
+configuration, you have to do tweaking yourself.
 
  % ./xboxdrv \
    --ui-axismap x2=REL_X:10,y2=REL_Y:-10,x1=KEY_A:KEY_D,y1=KEY_W:KEY_S \
