@@ -1,7 +1,7 @@
 # -*- python -*-
 
 # env = Environment(CPPFLAGS=["-g", "-O2", "-Wall", "-ansi", "-pedantic"], LIBS=["usb"])
-env = Environment(CPPFLAGS=["-g", "-O2"], LIBS=["usb"])
+env = Environment(CPPFLAGS=["-g", "-O2"], LIBS=["usb", "X11"])
 env.Program("xboxdrv", ["src/xboxdrv.cpp", 
                         "src/xboxmsg.cpp",
                         "src/uinput.cpp",
