@@ -5,5 +5,6 @@ env.Program("jstest", ["jstest.c"])
 env.Program("evtest", ["evtest.c"])
 env.Program("usbcat", ["usbcat.cpp"], LIBS = ["usb"])
 env.Program("usbdebug", ["usbdebug.cpp"], LIBS = ["usb", "pthread"])
+env.Program("evtestplus", ["evtestplus.cpp"])
 
 # EOF #
